# test-data-file

./: Cargo.toml  LICENSE  README.md
.github/workflows/: linux.yml
src/: lib.rs
tests/: all_types.rs  complex_types.rs  insta.rs  tokio.rs
tests/samples/: check_array  invalid_users.json  snapshot  supported_kinds.list  test_me.csv  test_me.json  test_me.list  test_me.ron  test_me.toml  test_me.yaml  valid_users.json
tests/snapshots/: insta__first.snap  insta__second.snap
