[package]
name = "test-data-file"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
csv = "1"
insta = { version = "1", features = ["yaml"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt", "macros"] }
toml = "0.8"
iso_country = { version = "0.1", features = ["serde"] }
